--- a/style.css
+++ b/style.css
@@ -36,23 +36,24 @@ nav{
 	padding-top: 50px;
 	max-width: 1050px;
 	margin: 0 auto;
+	overflow: auto;
 }
 nav ul{
     display: flex;
 	list-style-type: none;
 	float: right;
-	overflow: hidden;
 	width: 100%;
-	max-width: 700px;
+	max-width: 500px;
 	justify-content: space-between;
 	
 }
 nav ul li{
 	color: white;
-	padding: 20px 5px;
+	padding: 20px 2px;
 }
 nav ul li a{
     color: white;
+    font-weight: 500;
 }
 .pitch{
     font-size: 40px;
@@ -61,6 +62,7 @@ nav ul li a{
     position: absolute;
     top: 25vh;
     left: 2.5rem;
+    line-height: 2.6em;
 }
 .wwd{
 	margin: 4.5rem auto;
@@ -182,6 +184,10 @@ footer ul{
     border-radius: 15px;
 }
 @media (max-width: 1000px){
+    nav{
+        padding-right: 2.5rem;
+        padding-left: 2.5rem;
+    }
     .text{
         height: 300px;
         padding: 0 1.5rem;
