--- a/style2.css
+++ b/style2.css
@@ -4,17 +4,23 @@
     padding: 0;
     font-family: 'montserrat'
 }
+hr{
+	border-top: 1px solid white;
+	border-bottom: 1px white;
+}
 .mb-2{
 	margin-bottom: 20px;
 }
 .white-bg{
     background-color: white;
+    color: black;
 }
 .yellow-bg{
     background-color: #ffe14d;
 }
 .green-bg{
     background-color: #15af4b;
+    color: white;
 }
 .container{
     max-width: 1050px;
@@ -29,6 +35,37 @@
 }
 .grid{
 	display: grid;
+}
+.logo{
+	width: 100px;
+}
+nav{
+	padding-top: 50px;
+	max-width: 1050px;
+	margin: 0 auto;
+	margin-bottom: 2rem;
+	overflow: auto;
+    font-weight: 400;
+}
+nav ul{
+    display: flex;
+	list-style-type: none;
+	float: right;
+	width: 100%;
+	max-width: 500px;
+	justify-content: space-between;
+	
+}
+nav ul li{
+	color: inherit;
+	padding: 20px 2px;
+}
+nav ul li a{
+    color: inherit;
+    text-decoration: none;
+}
+.focus{
+	font-weight: 900;
 }
 .contact-form{
 	width: 500px;
@@ -49,6 +86,7 @@ textarea{
 	height: 200px;
 	padding: 15px;
 	border: 1px solid;
+	overflow: scroll-x;
 }
 input{
 	height: 50px;
@@ -59,36 +97,43 @@ input{
 	height: 60px;
 	width: 50%;
 	max-width: 500px;
-	border: 1px solid black;
-	border-radius: 0;
+	border: 1px solid white;
 	margin-right: 2.5rem;
 	padding: 0 3rem;
 	font-size: 15px;
+	background-color: inherit;
+	overflow: hidden;
+	color: inherit;
 }
 .footer-menu{
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	justify-content: space-between;
-	margin: 2.5rem auto;
-	max-width: 1050px
+	margin-top: 2.5rem;
+	margin-bottom: 2rem;
 }
-footer ul{
+.footer-menu h4{
+	font-weight: 1000;
+}
+.footer-menu ul{
 	list-style-type: none;
-	line-height: 2rem;
+	line-height: 2.5rem;
+}
+.footer-menu ul li a{
+	text-decoration: none;
+	color: inherit;
 }
 .socials{
-    margin: 1rem auto;
-    width: 100%;
+	margin-top: 2rem;
 }
 .socials ul{
     list-style-type: none;
 }
 .socials li{
-    border-radius: 7px;
     display: inline;
 }
 .socials img{
-    height: 30px;
-    width: 30px;
-    border-radius: 15px;
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
 }
