--- a/style2.css
+++ b/style2.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'montserrat'
+    font-family: 'montserrat';
+    line-height: 2rem;
 }
 hr{
 	border-top: 1px solid white;
@@ -10,6 +11,9 @@ hr{
 }
 .mb-2{
 	margin-bottom: 20px;
+}
+.mr-10{
+	margin-left: 10px;
 }
 .white-bg{
     background-color: white;
@@ -66,6 +70,25 @@ nav ul li{
 nav ul li a{
     color: inherit;
     text-decoration: none;
+}
+.returns{
+	text-align: center;
+}
+.opportunity{
+	max-width: 700px;
+	margin-bottom: 2rem;
+}
+.opportunity h1{
+	margin-bottom: 2rem;
+}
+.white-box{
+	background-color: white;
+	border: 1px solid black;
+	padding: 10px;
+	overflow: auto;
+}
+.total{
+	float: right;
 }
 .focus{
 	font-weight: 900;
