--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ hr {
 	width: 100px;
 }
 .jumbotron{
-	background: url("Hero_Image-24.jpg");
+	background: url("hero.jpg");
 	height: 100vh;
 	background-position: center;
 	background-repeat: no-repeat;
