--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ hr {
         height: 100vh;
         max-height: 900px;
 	background-position: center;
-	background-repeat: no-repeat;
+	background-size: cover;
 }
 nav{
 	padding-top: 50px;
