--- a/style.css
+++ b/style.css
@@ -227,6 +227,9 @@ footer ul{
 		margin: 0 auto;
 		overflow: hidden;
 	}
+        .jumbotron{
+		height: 700px;
+	}
 }
 @media (max-width: 500px){
 	.email-input{
@@ -236,5 +239,8 @@ footer ul{
 	}
 	.submit{
 		width: 140px;
+	}
+        .jumbotron{
+		height: 500px;
 	}
 }
