--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ hr {
 .jumbotron{
 	background-image: url("hero.jpg");
         height: 100vh;
+        max-height: 1000px;
 }
 nav{
 	padding-top: 50px;
@@ -224,9 +225,6 @@ footer ul{
 		margin: 0 auto;
 		overflow: hidden;
 	}
-        .jumbotron{
-		height: 700px;
-	}
 }
 @media (max-width: 500px){
 	.email-input{
@@ -236,8 +234,5 @@ footer ul{
 	}
 	.submit{
 		width: 140px;
-	}
-        .jumbotron{
-		height: 700px;
 	}
 }
