--- a/style.css
+++ b/style.css
@@ -228,6 +228,9 @@ footer ul{
 		margin: 0 auto;
 		overflow: hidden;
 	}
+        .jumbotron{
+                max-height: 700px;
+        }
 }
 @media (max-width: 500px){
 	.email-input{
