--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ hr {
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
-    height: 100vh;
+    height: 100%;
     max-height: 1000px;
 }
 nav{
