--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ hr {
 .jumbotron{
 	background-image: url("assets/hero.jpg");
 	background-position: center;
+        background-size: cover;
 	background-repeat: no-repeat;
     height: 100%;
     max-height: 1000px;
