--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ hr {
 	background-position: right center;
         background-size: cover;
 	background-repeat: no-repeat;
+        overflow: auto;
     height: 100%;
     max-height: 1000px;
 }
