--- a/style.css
+++ b/style.css
@@ -34,8 +34,7 @@ hr {
         background-size: cover;
 	background-repeat: no-repeat;
         overflow: auto;
-    height: 100%;
-    max-height: 1000px;
+    height: 100vh;
 }
 nav{
 	padding-top: 50px;
@@ -228,6 +227,9 @@ footer ul{
 		width: 300px;
 		margin: 0 auto;
 		overflow: hidden;
+	}
+        .jumbotron{
+		height: 50vh;
 	}
 }
 @media (max-width: 500px){
