--- a/style.css
+++ b/style.css
@@ -229,7 +229,11 @@ footer ul{
 		overflow: hidden;
 	}
         .jumbotron{
-		height: 50vh;
+		height: 70vh;
+                background-image: url("assets/hero.jpg");
+	        background-position: center;
+                background-size: cover;
+	        background-repeat: no-repeat;
 	}
 }
 @media (max-width: 500px){
