--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ footer ul{
 		margin: 0 auto;
 		overflow: hidden;
 	}
-        .jumbotron{
+        .jumbotron::after{
 		height: 70vh;
                 background-image: url("assets/hero.jpg");
                 background-size: cover;
