--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+*{
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
@@ -21,12 +21,14 @@ hr {
 	padding: 19px;
 	font-weight: 600;
 	font-size: 15px;
+	transition: 0.6s;
 }
 .btn-yellow {
 	background-color: #fed401;
 	width: 160px;
 	height: 60px;
 	border: 1px solid #fed401;
+	transition: 0.6s;
 }
 .btn-yellow-link {
 	background-color: #fed401;
@@ -35,6 +37,10 @@ hr {
 	padding: 19px 0;
 	font-weight: 600;
 	text-align: center;
+	transition: 0.6s;
+}
+.more-btn:hover, .btn-yellow:hover, .btn-yellow-link:hover{
+	background-color: #b09050;
 }
 .container{
 	max-width: 1050px;
@@ -48,17 +54,20 @@ hr {
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
-    height: 100vh;
-    max-height: 1000px;
+	height: 100vh;
+	max-height: 1000px;
 }
 nav{
-	padding-top: 50px;
+	margin-top: 50px;
 	max-width: 1050px;
 	margin: 0 auto;
+	margin-bottom: 2rem;
 	overflow: auto;
+	font-weight: 400;
+	padding: 2rem 1rem;
 }
 nav ul{
-    display: flex;
+	display: flex;
 	list-style-type: none;
 	float: right;
 	width: 100%;
@@ -67,21 +76,24 @@ nav ul{
 	
 }
 nav ul li{
-	color: white;
+	color: inherit;
 	padding: 20px 2px;
 }
 nav ul li a{
-    color: white;
-    font-weight: 500;
+	color: inherit;
+	text-decoration: none;
+}
+ul li a:hover, .card a:hover{
+	text-decoration: underline;
 }
 .pitch{
-    font-size: 40px;
-    font-weight: 900;
-    color: white;
-    position: absolute;
-    top: 27vh;
-    left: 22vw;
-    line-height: 2.4em;
+	font-size: 40px;
+	font-weight: 900;
+	color: white;
+	position: absolute;
+	top: 27vh;
+	left: 22vw;
+	line-height: 2.4em;
 }
 .wwd{
 	margin: 4.5rem auto;
@@ -147,7 +159,7 @@ nav ul li a{
 	padding: 2.5rem 1rem;
 }
 .winner img{
-	width: 90px;
+	width: 80px;
 	height: 80px;
 	object-fit: cover;
 	border-radius: 40px;
@@ -195,41 +207,37 @@ footer ul{
 	line-height: 2rem;
 }
 .socials{
-    margin: 1rem auto;
-    width: 100%;
-    max-width: 1050px;
+	margin: 1rem auto;
+	width: 100%;
+	max-width: 1050px;
 }
 .socials ul{
-    list-style-type: none;
+	list-style-type: none;
 }
 .socials li{
-    border-radius: 7px;
-    display: inline;
+	border-radius: 7px;
+	display: inline;
 }
 .socials img{
-    height: 30px;
-    width: 30px;
-    border-radius: 15px;
+	height: 30px;
+	width: 30px;
+	border-radius: 15px;
 }
 @media (max-width: 1000px){
-    nav{
-        padding-right: 2.5rem;
-        padding-left: 2.5rem;
-    }
-    .pitch{
-    	left: 0;
-    	margin-left: 2.5rem;
-    }
-    .text{
-        height: 300px;
-        padding: 0 1.5rem;
-    }
-    .footer-menu{
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    }
-    footer > div{
-        padding: 0 1.5rem;
-    }
+	.pitch{
+		left: 0;
+		margin-left: 2.5rem;
+	}
+	.text{
+		height: 300px;
+		padding: 0 1.5rem;
+	}
+	.footer-menu{
+		grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+	}
+	footer > div{
+		padding: 0 1.5rem;
+	}
 }
 @media (max-width: 700px){
 	.winners{
@@ -245,10 +253,10 @@ footer ul{
 	}
 	.jumbotron{
 		height: 70vh;
-        background-image: url("assets/hero.jpg");
-        background-size: cover;
-        background-position: top left;
-	    background-repeat: no-repeat;
+		background-image: url("assets/hero.jpg");
+		background-size: cover;
+		background-position: top left;
+		background-repeat: no-repeat;
 	}
 }
 @media (max-width: 500px){
