--- a/style2.css
+++ b/style2.css
@@ -1,9 +1,9 @@
 *{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'montserrat';
-    line-height: 2rem;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-family: 'montserrat';
+	line-height: 2rem;
 }
 hr{
 	border-top: 1px solid white;
@@ -16,20 +16,20 @@ hr{
 	margin-left: 10px;
 }
 .white-bg{
-    background-color: white;
-    color: black;
+	background-color: white;
+	color: black;
 }
 .yellow-bg{
-    background-color: #ffe14d;
+	background-color: #ffe14d;
 }
 .green-bg{
-    background-color: #15af4b;
-    color: white;
+	background-color: #15af4b;
+	color: white;
 }
 .container{
-    max-width: 1050px;
-    margin: 0 auto;
-    padding: 40px 0;
+	max-width: 1050px;
+	margin: 0 auto;
+	padding: 40px 0;
 }
 .btn-yellow{
 	background-color: #ffe14d;
@@ -37,19 +37,21 @@ hr{
 	height: 60px;
 	border: 1px solid #ffe14d;
 }
+.btn-yellow:hover{
+	background-color: #b09050;
+}
 .logo{
 	width: 100px;
 }
 nav{
-	padding-top: 50px;
 	max-width: 1050px;
 	margin: 0 auto;
 	margin-bottom: 2rem;
 	overflow: auto;
-    font-weight: 400;
+	font-weight: 400;
 }
 nav ul{
-    display: flex;
+	display: flex;
 	list-style-type: none;
 	float: right;
 	width: 100%;
@@ -62,8 +64,8 @@ nav ul li{
 	padding: 20px 2px;
 }
 nav ul li a{
-    color: inherit;
-    text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 .focus{
 	font-weight: 900;
@@ -180,6 +182,9 @@ input{
 .invite{
 	margin-bottom: 2rem;
 }
+.footer h1{
+	margin-bottom: 30px;
+}
 .email-input{
 	height: 60px;
 	width: 50%;
@@ -210,23 +215,26 @@ input{
 	text-decoration: none;
 	color: inherit;
 }
+ul li a:hover{
+	text-decoration: underline;
+}
 .socials{
 	margin-top: 2rem;
 }
 .socials ul{
-    list-style-type: none;
+	list-style-type: none;
 }
 .socials li{
-    display: inline;
+	display: inline;
 }
 .socials img{
-    height: 40px;
-    width: 40px;
-    border-radius: 20px;
+	height: 40px;
+	width: 40px;
+	border-radius: 20px;
 }
 @media (max-width: 1050px){
-    .container{
-        padding-left: 1rem;
-        padding-right: 1rem;
-    }
+	.container{
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
 }
