--- a/style2.css
+++ b/style2.css
@@ -79,9 +79,11 @@ nav ul li a{
 .text h1{
 	margin-bottom: 3rem;
 }
+.text p{
+	margin-bottom: 1rem;
+}
 .image img{
 	width: 100%;
-	max-width: 480px;
 }
 .returns{
 	text-align: center;
@@ -108,6 +110,7 @@ figure{
 }
 figure img{
 	width: 70px;
+	height: 70px;
 }
 figcaption{
 	font-weight: 700;
@@ -139,7 +142,7 @@ figcaption{
 	background-image: url("assets/Character-1.svg");
 	background-position: right top;
 	background-repeat: no-repeat;
-	background-size: 450px 400px;
+	background-size: 460px;
 }
 .strategy h1{
 	margin-bottom: 2rem;
@@ -152,7 +155,7 @@ figcaption{
 	background-image: url("assets/Contact-us.svg");
 	background-position: right center;
 	background-repeat: no-repeat;
-	background-size: 500px 500px;
+	background-size: 500px;
 }
 .contact-form{
 	max-width: 500px;
@@ -181,6 +184,9 @@ input{
 }
 .invite{
 	margin-bottom: 2rem;
+}
+.footer{
+	padding-bottom: 1rem;
 }
 .footer h1{
 	margin-bottom: 30px;
@@ -219,7 +225,7 @@ ul li a:hover{
 	text-decoration: underline;
 }
 .socials{
-	margin-top: 2rem;
+	margin-top: 1rem;
 }
 .socials ul{
 	list-style-type: none;
@@ -228,13 +234,18 @@ ul li a:hover{
 	display: inline;
 }
 .socials img{
-	height: 40px;
-	width: 40px;
-	border-radius: 20px;
+	height: 30px;
+	width: 30px;
+	border-radius: 50%;
 }
 @media (max-width: 1050px){
 	.container{
 		padding-left: 1rem;
 		padding-right: 1rem;
+	}
+}
+@media (max-width: 700px) {
+	.email-input{
+		padding: 0 2rem;
 	}
 }
